# ReasoningTrust

./: .gitignore  README.md  requirements.txt  setup.cfg
scripts/: linear_probe_job.slurm  machine_ethics_run_all.sh  machine_ethics_run_specific.sh  ood_robustness_run_all.sh  privacy_run_all.sh  toxicity_run_all.sh  toxicity_specific_class_specific_template.sh
src/reasoning_trust/: .env  app.py
src/reasoning_trust/config/: config.yaml  models.yaml  submitit_slurm.yaml
src/reasoning_trust/models/: initialize_model.py
src/reasoning_trust/perspectives/machine_ethics/: process_data.py  system_prompts.py
src/reasoning_trust/perspectives/ood_robustness/: process_data.py  system_prompts.py
src/reasoning_trust/perspectives/ood_robustness/utils/: __init__.py  create_realtimeqa_dataset.py
src/reasoning_trust/perspectives/ood_robustness/utils/realtimeqa_dataset/: knowledge.jsonl
src/reasoning_trust/perspectives/privacy/: process_data.py  system_prompts.py  utils.py
src/reasoning_trust/perspectives/toxicity/: README.md  evaluate_toxicity.py  generate_and_evaluate_toxicity.py  generate_message.py  process_data.py  three_classes_system_prompts.py  toxicity_system_prompts.py
src/reasoning_trust/perspectives/toxicity/probing/: aligned_probing_comparative.py  comparative_linear_probe.py  comparative_linear_ridge_regression_probe.py
