# ini
[metadata]
name = reasoning-trust
version = 0.0.0
description = ReasoningTrust project

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    hydra-core>=1.3
    hydra-submitit-launcher>=1.1
    submitit>=1.5
    omegaconf>=2.1
    pyyaml>=5.4
    typing-extensions>=4.0
    numpy>=1.21
    vllm>=0.4
    transformers>=4.30
    torch>=2.0
    accelerate>=0.18
    sentencepiece>=0.1.98
    openpyxl>=3.0
    # add other project-specific deps here as needed

[options.entry_points]
console_scripts =
    reasoning-trust=reasoning_trust.app:main